# bevy_rhythm

./: Cargo.toml  LICENSE  README.md
assets/shaders/: background.wgsl  background_sin_wave.wgsl
src/: arrows.rs  audio.rs  consts.rs  main.rs  score.rs  types.rs  ui.rs
src/shaders/: background.rs  mod.rs  target_arrows.rs
