[package]
name = "bevy_rhythm"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["mp3", "shader_format_glsl"] }
rand = "0.9.0"
toml = "0.8.20"
serde = "1.0.219"
serde_derive = "1.0.219"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
